Initial commit with yeh lets do this as well project

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
-site_name: My Docs
+site_name: SAMxENGINEER Docs
 theme:
   name: material
+  logo: assets/logo.jpg
+  favicon: assets/logo.jpg
 plugins:
   - search
   - mermaid2
