--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,22 +1,157 @@
 site_name: SAMxENGINEER Docs
+site_description: Comprehensive documentation for SAMxENGINEER projects
+site_author: SAMxENGINEER
+
 theme:
-  name: material 
+  name: material
   logo: images_global/logo.jpg
   favicon: images_global/logo.jpg
+  
+  # Enhanced features for better navigation and UX
   features:
-    - navigation.footer  
+    # Navigation
+    - navigation.path
+    - navigation.footer
+    - navigation.indexes
+    
+    # Table of contents
+    - toc.follow
+    - toc.integrate
+    
+    # Search
+    - search.suggest
+    - search.highlight
+    - search.share
+    
+    # Header
+    - header.autohide
+    
+    # Content
+    - content.code.copy
+    - content.code.select
+    - content.code.annotate
+    - content.tabs.link
+    - content.tooltips
+    - content.footnote.tooltips
+    
+
+  # Enhanced color palette with dark/light mode toggle
   palette:
-    - scheme: default
+    # Light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
       primary: deep purple
-    - scheme: slate
-      accent: deep purple
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: deep purple
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
+  # Typography
   font:
     text: Inter
-    code: JetBrains Mono 
-copyright: "SAMxENGINEER Docs"
-extra_css:
-  - css/extra.css
+    code: JetBrains Mono
 
+  
+
+# Site information
+copyright: |
+  SAMxENGINEER
+  <a href="#__consent">Change cookie settings</a>
+
+# Enhanced plugins
 plugins:
   - search
   - mermaid2
+  - minify:
+      minify_html: true
+  - git-revision-date-localized:
+      enable_creation_date: true
+  - git-committers:
+      repository: SAMxENGINNER/ALL_DOCUMENTATIONS-
+      branch: main
+
+# Markdown extensions
+markdown_extensions:
+  # Python Markdown
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - toc:
+      permalink: true
+      title: On this page
+
+  # Python Markdown Extensions
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.snippets:
+      auto_append:
+        - includes/mkdocs.md
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+      combine_header_slug: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+
+# Custom CSS and JavaScript
+extra_css:
+  - css/extra.css
+  - https://unpkg.com/katex@0/dist/katex.min.css
+
+# Social links and extra configuration
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/SAMxENGINNER
+      name: GitHub
+      name: Twitter
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/sameer-chavan-6ba48b2b7
+      name: LinkedIn
+    - icon: fontawesome/solid/envelope
+      link: mailto:chavansameer930@gmail.com
+      name: Email
+
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    actions:
+      - accept
+      - manage
